
===========
Changes log
===========

@version-full@ (@release-date@)
    - Misc
      - Refreshed copyright headers

- 2.3.12 (10/02/2017)
    - Bugs fixed
       - XEE injection security in XML extension.
         Reported by Man Yue Mo.

- 2.3.11 (09/28/2017)
    - Bugs fixed
       - Fixed NPE in JAX-RS backend when request's entity has no media type. Issue #1271.
         Reported by Thomas Mortagne.
       - XEE injection security fix in Jax-rs extension. Issue #1286.
         Reported by Man Yue Mo.
    - Enhancements
       - Added support of Header Origin and Origin dimension. Issue #1275.
         Reported and contributed by adolski.

- 2.3.10 (05/28/2017)
    - Bugs fixed
       - Invalid max-age value for cookie settings replaced by Integer.MAX_VALUE constant. Issue #1251.
         Reported by Chad Gatesman.
       - Fixed parsing of If-Match header in case it contains an invalid tag. Issue #1258.
         Reported by Guillaume Blondeau.
       - Make the internal server connector listening to specific IP address, if provided. Issue #1256.
         Reported by Juan Manuel de Blas.
       - Fixed resolution of variables f* and h*. Issue #1260.
       - Fixed agent.properties typo resulting in unnecessary log warning. Issue #1262.
         Reported By Arjohn Kampman.
    - Enhancements
       - Add literal conversion support for the Boolean, Byte, Int16, Int32, Int64, Decimal, Single and Double 
         Edm types in the OData extension.
         Reported and contributed by Serge Sozonoff.

- 2.3.9 (12/19/2016)
    - Bugs fixed
       - In IE 10 and seq., request without body are sent with an "undefined" body. Issue #1252.
         Reported by Etienne Griette.
       - Fixed potential NPE when a queue returns null in PipeStream. Issue #1246.
         Reported and contributed by Grégoire Juge. 

- 2.3.8 (12/10/2016)
    - Bugs fixed
       - Fixed NullPointerException when requesting a Directory with a query string. Issue #1206.